# ap-move-raw-light-to-blink

./: .gitignore  MANIFEST.in  Makefile  README.md  TEST_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml
ap_copy_lights/: __init__.py  config.py  copy_lights.py
ap_move_lights/: __init__.py  move_lights.py
ap_move_raw_light_to_blink/: __main__.py  config.py  move_lights.py
tests/: __init__.py  conftest.py  test_copy_lights.py  test_move_lights.py
