[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-move-raw-light-to-blink"
version = "0.1.0"
description = "Move and organize astrophotography files from raw directory to destination based on FITS header metadata"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Naveen Malik"}
]
keywords = ["astrophotography", "fits", "file-organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "astropy",
    "tqdm",
    "xisf==0.9.5",
    # ap-common from git repository
    "ap-common @ git+https://github.com/jewzaam/ap-common.git",
]

[project.scripts]
ap-move-raw-light-to-blink = "ap_move_raw_light_to_blink.move_lights:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy==1.11.2",
]

[tool.setuptools]
packages = ["ap_move_raw_light_to_blink"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503", "F401", "W605", "E722"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = false
